Fix stretched footer logo by adding align-self: flex-start
img in a flex column container stretches to full width without this.

--- a/css/layout.css
+++ b/css/layout.css
@@ -166,6 +166,7 @@
 .footer-logo-img {
     height: 48px;
     width: auto;
+    align-self: flex-start;
     filter: brightness(0) invert(1);
 }
 
